--- a/fiche_perso_papier.html
+++ b/fiche_perso_papier.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="fr">
 
 <head>
-    <title>Cartes Soluche papier</title>
+    <title>Soluche - Fiche perso</title>
     <meta charset="utf-8">
     <style>
         th {
