--- a/fiche_perso_dynamic.html
+++ b/fiche_perso_dynamic.html
@@ -2,8 +2,9 @@
 <html lang="fr">
 
 <head>
-    <title>Cartes Soluche papier</title>
+    <title>Soluche - Fiche perso</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         th {
             border-bottom-style: solid;
